# aztec-packages

./: README.md
.github/workflows/: build&test.yml  run-examples.yml
barretenberg/cpp/: .gitignore  CMakeLists.txt  bootstrap.sh
barretenberg/cpp/cmake/: arch.cmake
barretenberg/cpp/src/: CMakeLists.txt
barretenberg/cpp/src/barretenberg/common/: fuzzer.hpp  mem.hpp  serialize.hpp
barretenberg/cpp/src/barretenberg/crypto/pedersen_commitment/: rust_bind.cpp  rust_bind.hpp
barretenberg/cpp/src/barretenberg/crypto/schnorr/: rust_bind.cpp  rust_bind.hpp
barretenberg/cpp/src/barretenberg/dsl/acir_proofs/: rust_bind.cpp  rust_bind.hpp
barretenberg/cpp/src/barretenberg/ecc/groups/: group.hpp  group_impl_int128.tcc
barretenberg/cpp/src/barretenberg/examples/: rust_bind.cpp  rust_bind.hpp
barretenberg/cpp/src/barretenberg/honk/sumcheck/: sumcheck_round.hpp
barretenberg/cpp/src/barretenberg/numeric/uint128/: uint128.hpp
barretenberg/cpp/src/barretenberg/proof_system/relations/: relation_types.hpp
barretenberg/cpp/src/barretenberg/srs/: c_bind.cpp  c_bind.hpp  rust_bind.cpp  rust_bind.hpp
noir/: Cargo.toml
noir/tooling/noir_rs/: Cargo.toml  envs
noir/tooling/noir_rs/barretenberg/: build.rs
noir/tooling/noir_rs/barretenberg/src/srs/: localsrs.rs  mod.rs  netsrs.rs
noir/tooling/noir_rs/examples/line_check_circuit/: Cargo.toml  Nargo.toml
noir/tooling/noir_rs/examples/line_check_circuit/src/: main.nr  main.rs  structs.nr
noir/tooling/noir_rs/examples/poly_check_circuit/: Cargo.toml  Nargo.toml
noir/tooling/noir_rs/src/: lib.rs
(+1 files in other folders)
