[package]
name = "line_check_circuit"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Nowak https://github.com/Okm165"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noir_rs = { git = "https://github.com/visoftsolutions/noir_rs.git", branch = "latest", package = "noir_rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"